# bounceGL

./: CMakeLists.txt  README.md  ball_data.hpp  box.cpp  box.hpp  camera.cpp  camera.hpp  ctrl_panel.cpp  ctrl_panel.hpp  dcmake  draw_instanced_no_texture.cpp  draw_instanced_no_texture.hpp  draw_instanced_with_texture.cpp  draw_instanced_with_texture.hpp  draw_singleton_no_texture.cpp  draw_singleton_no_texture.hpp  drawable.cpp  drawable.hpp  glad.c  grid_square.cpp  grid_square.hpp  main.cpp  program.cpp  program.hpp  square.cpp  texture.cpp  texture.hpp
calc/: matrix.hpp  matrix_0x0.hpp  matrix_nxm.hpp  matrix_operation.hpp  matrix_transform.hpp  mem.hpp
calc/simd/: matrix_add.hpp  matrix_mul.hpp  matrix_sub.hpp  scalar_div.hpp  scalar_mul.hpp  schur_mul.hpp
release/: bounce  imgui.ini
shaders/: instanced_with_texture.fs
